--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@ body,html{min-height:100%;height:100%;}
 body{display:flex;background-color:#eee;}
 ul{list-style:none;}
 a{color:#fff;align-self: flex-start;}
-.wrap{display:flex;}
+.wrap{
+	display:flex;
+	width: 100%;
+}
 .control{
 	color: #888;
 	font: 12px/1.5 '\5FAE\8F6F\96C5\9ED1',Tahoma,"hiragino sans gb",Helvetica,Arial;
@@ -33,7 +36,7 @@ a{color:#fff;align-self: flex-start;}
 	color:#fff;
 }
 .control .propertys{
-	width:80px;
+	width:100px;
 	text-align:right;
 }
 .control .property{
@@ -55,6 +58,7 @@ a{color:#fff;align-self: flex-start;}
     margin: 10px;
     padding: 20px;
     border-radius: 4px;
+    overflow: auto;
 }
 code {
     display: block;
@@ -76,6 +80,9 @@ code {
 	width:150px;
 	height:100px;
 	margin:10px;
+	text-align: center;
+    line-height: 100px;
+    font-size: 40px;
 }
 .tooltip{
 	position:absolute;
