基本可用，子元素切换不能高亮显示已经点过的属性值

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,15 @@ a{color:#fff;align-self: flex-start;}
     border-radius: 4px;
     overflow: auto;
 }
+.values input {
+	background-color: transparent;
+	border: none;
+	border-radius: 2px;
+	color: #fff;
+	outline: none;
+}
 code {
+	margin: -20px 0;
     display: block;
 }
 .show{
